src/styles/button/properties.css
@import "../colors.css";
@import "../typography.css";

:root {
  --button-border-radius: 3px;
  --button-color: var(--color-white);
  --button-font-family: var(--title-font-family);
  --button-font-style: var(--title-font-style);
  --button-font-weight: var(--title-font-weight);
  --button-letter-spacing: var(--letter-spacing);
  --button-user-select: none;

  --button-default-font-size: 14px;
  --button-default-height: 32px;
  --button-default-padding: 0 var(--spacing-medium);
  --button-default-text-transform: uppercase;

  --button-huge-font-size: 16px;
  --button-huge-height: 44px;
  --button-huge-padding: 0 48px;
  --button-huge-text-transform: uppercase;

  --button-tiny-font-size: 12px;
  --button-tiny-height: 26px;
  --button-tiny-padding: 0 var(--spacing-tiny);
  --button-tiny-text-transform: none;

  --button-high-relevance-background-color-hover: var(--color-light-salmon-120);
  --button-high-relevance-background-color-active: var(--color-light-salmon-150);
  --button-high-relevance-boxshadow-focus: var(--color-light-salmon-150) 0 0 0 2px inset;
  --button-high-relevance-flat-background-color: var(--color-light-salmon-100);
  --button-high-relevance-gradient: var(--color-light-salmon-gradient);
  --button-high-relevance-outline-color: var(--color-light-salmon-100);
  --button-high-relevance-outline-border-color: var(--color-light-salmon-100);
  --button-high-relevance-outline-border-width: 1px;
  --button-high-relevance-outline-color-enter: var(--color-white);
  --button-high-relevance-outline-background-color-focus: var(--color-light-salmon-100);
  --button-high-relevance-outline-border-color-focus: var(--color-light-salmon-150);
  --button-high-relevance-outline-boxshadow-focus: var(--color-light-salmon-150) 0 0 0 1px inset;
  --button-high-relevance-clean-color: var(--color-light-salmon-100);
  --button-high-relevance-clean-color-hover: var(--color-light-salmon-120);
  --button-high-relevance-clean-color-active: var(--color-light-salmon-150);
  --button-high-relevance-clean-color-focus: var(--color-light-salmon-120);

  --button-low-relevance-background-color-hover: var(--color-light-iron-100);
  --button-low-relevance-background-color-active: var(--color-light-grey-100);
  --button-low-relevance-boxshadow-focus: #979797 0 0 0 2px inset;
  --button-low-relevance-flat-background-color: var(--color-light-grey-50);
  --button-low-relevance-gradient: var(--color-light-grey-gradient);
  --button-low-relevance-outline-color: var(--color-light-grey-50);
  --button-low-relevance-outline-border-color: var(--color-light-grey-50);
  --button-low-relevance-outline-border-width: 1px;
  --button-low-relevance-outline-color-enter: var(--color-white);
  --button-low-relevance-outline-background-color-focus: var(--color-light-grey-50);
  --button-low-relevance-outline-border-color-focus: #979797;
  --button-low-relevance-outline-boxshadow-focus: #979797 0 0 0 1px inset;
  --button-low-relevance-clean-color: var(--color-light-grey-50);
  --button-low-relevance-clean-color-hover: var(--color-light-iron-100);
  --button-low-relevance-clean-color-active: var(--color-light-grey-100);
  --button-low-relevance-clean-color-focus: var(--color-light-iron-100);

  --button-normal-relevance-background-color-hover: var(--color-light-greenish-120);
  --button-normal-relevance-background-color-active: var(--color-light-greenish-150);
  --button-normal-relevance-boxshadow-focus: var(--color-light-greenish-150) 0 0 0 2px inset;
  --button-normal-relevance-flat-background-color: var(--color-light-greenish-100);
  --button-normal-relevance-gradient: var(--color-light-greenish-gradient);
  --button-normal-relevance-outline-color: var(--color-light-greenish-100);
  --button-normal-relevance-outline-border-color: var(--color-light-greenish-100);
  --button-normal-relevance-outline-border-width: 1px;
  --button-normal-relevance-outline-color-enter: var(--color-white);
  --button-normal-relevance-outline-background-color-focus: var(--color-light-greenish-100);
  --button-normal-relevance-outline-border-color-focus: var(--color-light-greenish-150);
  --button-normal-relevance-outline-boxshadow-focus: var(--color-light-greenish-150) 0 0 0 1px inset;
  --button-normal-relevance-clean-color: var(--color-light-greenish-100);
  --button-normal-relevance-clean-color-hover: var(--color-light-greenish-120);
  --button-normal-relevance-clean-color-active: var(--color-light-greenish-150);
  --button-normal-relevance-clean-color-focus: var(--color-light-greenish-120);

  --button-disabled-background-color: var(--color-light-silver-50);
  --button-disabled-color: var(--color-light-silver-100);

  --button-icon-margin: 0 8px 0 0;
  --button-icon-padding: 0;
  --button-icon-width-tiny: 26px;
  --button-icon-width-default: 32px;
  --button-icon-width-huge: 44px;
  --butoon-icon-circle-border-radius: 50%;
  --button-only-icon-margin: 0;
}

